manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: LoadBalancer
