manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo_app_ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my_ip_address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo_app_service
                port:
                  number: 5000
